# ChangeLog for dev-python/github2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Nov 2010; James Rowe <jnrowe@gmail.com> github2-0.2.0.ebuild:
  Keyworded amd64.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

*github2-0.2.0 (31 Oct 2010)

  31 Oct 2010; James Rowe <jnrowe@gmail.com> +github2-0.2.0.ebuild:
  Version bump [218].

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  01 Oct 2010; James Rowe <jnrowe@gmail.com> github2-0.1.3.ebuild:
  Keyworded x86.

  01 Oct 2010; James Rowe <jnrowe@gmail.com> github2-0.1.3.ebuild:
  Keyworded amd64.

  01 Sep 2010; James Rowe <jnrowe@gmail.com> github2-0.1.3.ebuild:
  Keyworded ~x86.

*github2-0.1.3 (01 Sep 2010)

  01 Sep 2010; James Rowe <jnrowe@gmail.com> +github2-0.1.3.ebuild,
  +files/github2-0.1.3-setuptools_find_packages_breakage.patch,
  +metadata.xml:
  Initial ebuild, by me [4de].
