@@ -2,16 +2,14 @@
 Hash: SHA1
 
 AUX github2-0.1.3-setuptools_find_packages_breakage.patch 497 RMD160 b278782ea3df700c686564aa1682be04953ac154 SHA1 17bfe54b3091daf5fb09ee43ab65fb754a4f73bc SHA256 b841db26e3807eb17cc5c2a1e440746cf2179eb64ea5c007ac1eafa9b55e38dc
-DIST github2-0.1.3.tar.gz 12473 RMD160 31ee0401cf5eae6dadb5cebe485ee7094c5cbe01 SHA1 e4da6403bcff45bcfe437af40150309cc6246234 SHA256 8f699832a52e97e88dbe42938b02fecb12c00ecd9bb6925bba020dd4d1aab988
 DIST github2-0.2.0.tar.gz 13906 RMD160 67f344444d7a8d5e9e7972b71f0a586aa04f325f SHA1 0171a2041f8f0417aeda4768a537a4510fcf28d7 SHA256 f6c46dcc050d5ce482de0ba938b6962a8b45efd3dd6ae5f2459b311e7281b9c1
-EBUILD github2-0.1.3.ebuild 937 RMD160 c21cbe970c49dadc56317d1f3012876eb2e9669d SHA1 fa10e60889440595e4611f270290baaf00a8ecd1 SHA256 37ef0c5e7196f6d1f796f04230118b1ce90906ac50cedb5cb0377610520810fd
-EBUILD github2-0.2.0.ebuild 1061 RMD160 2f530861ebc0b432fd5e076be642d067be3e8415 SHA1 20c6fc3a729e13020ebe34bed263044ed1dfbe7f SHA256 ebbb1125e2719ef1be3d21010f55361a1f09a4ec5de0cff9a433d100469ef853
-MISC ChangeLog 1009 RMD160 870b46e11a7b909b4280995bd2ea5ad609fe88d2 SHA1 449727f25165c127bffe442763675b7d6bfda5ae SHA256 53ee65641a22c82f756736908b2c69ec4c2574e9edf69d14800d1c731920682f
+EBUILD github2-0.2.0.ebuild 1060 RMD160 e5d4cdc2190b1f080cad08f7def7b2db901bb7e6 SHA1 c7bc5032060155d7e26a9dc7f1e0199e0111c19d SHA256 6c2f8707d2ad687e692f55a6989a35fe1d05f12a17fc07837ba1c5d1cd63058b
+MISC ChangeLog 1119 RMD160 347ce1a81cb18aedcf517ae9978c3c4b34ac7668 SHA1 f9b10f7de265cffd3d808aa8b44e2a329139e34c SHA256 e7d8075071f2157eec8d83aca78a681d68130697d93c77f057474fdff04b59ab
 MISC metadata.xml 647 RMD160 09af4425feef0ab2ed752dbe7e7683ef28c0f458 SHA1 c39075966e63e621b01038f9350b43a3353b6458 SHA256 faee41216c00b37ac29520caf25609c35153809517187b810dbdd7ed05980295
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkz1DOwACgkQzJrj3cAXR0l3ZgCeOzyHbeaZ+MrDH6erLfbdj45a
-OX8An0enotZPPw/jJe8yOAv7usWJavkN
-=DW75
+iEYEARECAAYFAkz2MZUACgkQzJrj3cAXR0kSHwCgmPII1MRGw8u+r5iaj3xaj3ha
+rgMAn2eG8t3r2Neyuj5IkMiCtUW3N28y
+=OKXp
 -----END PGP SIGNATURE-----
