@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20091230 dev-lang/python test? ( dev-python/nose )
->=app-admin/eselect-python-20091230 dev-lang/python
-0
-mirror://pypi/g/github2/github2-0.1.3.tar.gz
-
-http://pypi.python.org/pypi/github2/
-BSD
-Github API v2 library for Python
-amd64 x86
-base distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-examples test
-
-
-
-3
-
-compile configure install postinst postrm prepare test unpack
-
-
-
-
-
