@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Dec 2010; James Rowe <jnrowe@gmail.com> -github2-0.1.3.ebuild,
+  github2-0.2.0.ebuild:
+  Keyworded x86.
+
   30 Nov 2010; James Rowe <jnrowe@gmail.com> github2-0.2.0.ebuild:
   Keyworded amd64.
 
